adding contact page

--- a/app/modules/application/templates/main.hbs
+++ b/app/modules/application/templates/main.hbs
@@ -6,6 +6,7 @@
         <ul class="nav-primary nav-horizontal">
             <li>{{#linkTo songs}}Songs{{/linkTo}}</li>
             <li>{{#linkTo schedule}}Schedule{{/linkTo}}</li>
+            <li>{{#linkTo contact}}Contact Us{{/linkTo}}</li>
         </ul>
     </nav>
 </div>
