--- a/app/modules/index/templates/main.hbs
+++ b/app/modules/index/templates/main.hbs
@@ -3,6 +3,7 @@
 <div>
     <label>We are a classic rock band that has been together for 8 years.
         For a list of our upcoming shows, check our Schedule.
+        For more information, please visit the {{#linkTo contact}}Contact Us{{/linkTo}} page.
     </label>
 </div>
 
