Added an image for the band name

--- a/app/modules/application/templates/main.hbs
+++ b/app/modules/application/templates/main.hbs
@@ -1,6 +1,7 @@
 <div class="l-container">
-<h1>{{#linkTo index classNameBindings="siteTitle"}}Tunebenders{{/linkTo}}</h1>
-<hr>
+
+{{#linkTo index classNameBindings="siteTitle"}}<img src="images/tunebenders.png" class="siteTitle">{{/linkTo}}
+
 <div class="row-fluid nav-container">
     <nav class="col-12">
         <ul class="nav-primary nav-horizontal">
