--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -44,5 +44,11 @@ embed {
 }
 
 .siteTitle {
-  padding-left: 8em;
+  margin: 0 auto;
+  display: block;
+}
+
+.siteImages {
+  margin: 0 auto;
+  display: table;
 }
