--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,14 @@
 
 {{#linkTo index classNameBindings="siteTitle"}}<img src="images/tunebenders.png" class="siteTitle">{{/linkTo}}
 
+  <div class="siteImages">
+
+  <img src="images/pics/front1.jpg">
+  <img src="images/pics/back1.jpg">
+  <img src="images/pics/side2.jpg">
+  <img src="images/pics/front2.jpg">
+  </div>
+
 <div class="row-fluid nav-container">
     <nav class="col-12">
         <ul class="nav-primary nav-horizontal">
