adding a pics page, still cleaning it up

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,9 +13,10 @@
 <div class="row-fluid nav-container">
     <nav class="col-12">
         <ul class="nav-primary nav-horizontal">
-            <li>{{#linkTo songs}}Songs{{/linkTo}}</li>
-            <li>{{#linkTo schedule}}Schedule{{/linkTo}}</li>
-            <li>{{#linkTo contact}}Contact Us{{/linkTo}}</li>
+          <li>{{#linkTo songs}}Songs{{/linkTo}}</li>
+          <li>{{#linkTo schedule}}Schedule{{/linkTo}}</li>
+          <li>{{#linkTo pics}}Pics{{/linkTo}}</li>
+          <li>{{#linkTo contact}}Contact Us{{/linkTo}}</li>
         </ul>
     </nav>
 </div>
