Added the nivo gallery for images

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -3,6 +3,7 @@
 // Base
 
 @import "../../vendor/bourbon/app/assets/stylesheets/bourbon";
+@import "../../vendor/nivo/nivo-gallery";
 @import "base/normalize";
 @import "base/settings";
 @import "base/helpers";
