--- a/app/templates/pics.hbs
+++ b/app/templates/pics.hbs
@@ -1,5 +1,5 @@
-<div class="pikachoose">
-  <ul id="pics">
+<div id="gallery" class="nivoGallery">
+  <ul>
     <li><img src="images/pics/BandPic1.jpg"></li>
     <li><img src="images/pics/BandPic2.jpg"></li>
     <li><img src="images/pics/BandPic3.jpg"></li>
